# githubstar

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  releasepypi.yml
examples/: github-stars-bookmark.groupby-language.html  github-stars-bookmark.html  github-stars.groupby-language.html  github-stars.groupby-language.json  github-stars.groupby-language.md  github-stars.html  github-stars.json  github-stars.md
githubstar/: fileexporter.py  githubstar.py  starredfetcher.py  topicsinfo.py  utils.py  version.py
